--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,8 @@
-node_modules
+node_modules/
 
-docker-compose.yaml
-
+# dotenv environment variables file
 .env
 
-docker/database/postgres/data
+#docker
+docker-compose.yaml
+docker/database/postgres/data/
