--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
     "devextreme": "^21.2.5",
     "devextreme-react": "^21.2.5",
     "react": "^17.0.2",
@@ -19,6 +20,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
