--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
     "sequelize": "^6.16.0",
     "sequelize-cli": "^6.4.1",
     "uuid": "^8.3.2"
