--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "devextreme-react": "^21.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.6",
     "react-responsive-modal": "^6.2.0",
     "react-router-dom": "^6.2.1",
