--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,25 @@
 PORT=4000
 
-#production, development,test 
+# production, development, test 
 NODE_ENV=development
 
 #JWT SEED
 SECRET_JWT_SEED=110293847560192837465
 
+# Database
 DB_HOST=localhost
 DB_DIALECT=postgres
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_DATABASE=alkemy
+
+# Nodemailer / google
+CLIENT_ID=277577358010-jk9q4n7oi3qok5n8jrgrn44k878kum20.apps.googleusercontent.com
+CLIENT_SECRET=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
+REDIRECT_URI=https://developers.google.com/oauthplayground
+REFRESH_TOKEN=1//044WoP_gIVS9DCgYIARAAGAQSNwF-L9IrFJI5vSQVkK7RKYRcVShmQB63nk4lUsPt-cqP4HimL9dxCGuEUyYxvmxrPPnrAS8ZdSA
+ACCESS_TOKEN=1//044WoP_gIVS9DCgYIARAAGAQSNwF-L9IrFJI5vSQVkK7RKYRcVShmQB63nk4lUsPt-cqP4HimL9dxCGuEUyYxvmxrPPnrAya29.A0ARrdaM99GJ4fhmhMjzzuzXWFH53SBaQvHF1IqVc7qlwR2o-u0mHaFfKLkl8d6gd76ZoXALgS9EuN4lGaONyQOSp8eZkZy9U4VXfTeDRa0-cF_10MahmxgL_fn3t6T1Q3N7s38SM747vVOz8l-a4IKrmSTTm0
+USER_EMAIL=your@email.com
+
+# Frontend
+FRONT_URL=http://localhost:3000
