--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "google-auth-library": "^7.12.0",
+    "googleapis": "^95.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "sequelize": "^6.16.0",
